# Falkor

./: .env  .env.example  README.md  bun.lockb  package.json  tailwind.config.js  todo.md  vite.config.ts
.github/workflows/: publish.yml
helpers/: dev.bat
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/@types/: index.ts  settings.ts  torrent.types.ts  types.ts
src/components/: IGDBImage.tsx  genericRow.tsx
src/components/banner/: index.tsx
src/components/cards/: bannerCard.tsx  defaultCard.tsx  pluginCard.tsx  rectangleCard.tsx  searchCard.tsx
src/components/containers/: mainContainer.tsx  row.tsx
src/components/countdown/: index.tsx  item.tsx
src/components/hltb/: index.tsx
src/components/info/: bottom.tsx  carouselButton.tsx  media.tsx  mediaDialog.tsx  middle.tsx  similar.tsx  top.tsx
src/components/libary/: List.tsx  continue.tsx  newGame.tsx
src/components/loading/: middle.tsx
src/components/setting/: title.tsx
src/components/settings/: settingTab.tsx
src/components/sideNavigation/: index.tsx  item.tsx  recentGame.tsx
src/components/skeletons/: banner.tsx  (+2 more)
src/containers/: mainContainer.tsx
src/contexts/: languageContext.tsx  torrent.tsx
src/hooks/: useCollection.tsx  useCountdown.tsx  useGeneralSetting.tsx  useNotification.tsx  useTorrentList.tsx  useTorrentStats.tsx
src/i18n/: index.tsx
src/routes/: __root.tsx  index.lazy.tsx  libary.lazy.tsx  settings.lazy.tsx
src/stores/: games.tsx  index.ts  settings.tsx  torrent.tsx
src/utils/: console.tsx  utils.ts
(+99 files in other folders)
